@@ -2,13 +2,4 @@
 module HLint.HLint where
 
 import HLint.Default
-import HLint.Builtin.List
-import HLint.Builtin.ListRec
-import HLint.Builtin.Monad
-import HLint.Builtin.Lambda
-import HLint.Builtin.Bracket
-import HLint.Builtin.Naming
-import HLint.Builtin.Structure
-import HLint.Builtin.Import
-import HLint.Builtin.Pragma
-import HLint.Builtin.Extensions
+import HLint.Builtin.All
